--- a/arch/arm64/boot/dts/qcom/msm8996-v3.0.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-v3.0.dtsi
@@ -117,7 +117,7 @@
 };
 
 &clock_gpu {
-	compatible = "qcom,gpucc-8996-v3.0";
+	compatible = "qcom,gpucc-msm8996-v3.0";
 	qcom,gfx3d_clk_src_v2-opp-handle = <&msm_gpu>;
 	qcom,gfxfreq-speedbin0 =
 		<	   0  0  0 >,
