--- a/arch/arm64/boot/dts/qcom/msm8996-agave-adp.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-agave-adp.dtsi
@@ -900,8 +900,8 @@
 			synaptics,fw-name = "PR1702898-s3528t_00350002.img";
 			/* Underlying clocks used by secure touch */
 			clock-names = "iface_clk", "core_clk";
-			clocks = <&clock_gcc clk_gcc_blsp2_ahb_clk>,
-				 <&clock_gcc clk_gcc_blsp2_qup6_i2c_apps_clk>;
+			clocks = <&clock_gcc GCC_BLSP2_AHB_CLK>,
+				 <&clock_gcc GCC_BLSP2_QUP6_I2C_APPS_CLK>;
 			status = "disabled";
 		};
 	};
@@ -1361,7 +1361,7 @@
 		pinctrl-names = "nfc_active", "nfc_suspend";
 		pinctrl-0 = <&nfc_int_active &nfc_disable_active>;
 		pinctrl-1 = <&nfc_int_suspend &nfc_disable_suspend>;
-		clocks = <&clock_gcc clk_bb_clk2_pin>;
+		clocks = <&clock_rpmcc RPM_BB_CLK2_PIN>;
 		clock-names = "ref_clk";
 		status = "disabled";
 	};
