--- a/arch/arm64/boot/dts/qcom/msm8996-camera-sensor-dtp.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-camera-sensor-dtp.dtsi
@@ -75,8 +75,8 @@
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK0",
 					  "CAM_RESET0",
 					  "CAM_STANDBY0";
-		clocks = <&clock_mmss clk_mclk0_clk_src>,
-				<&clock_mmss clk_camss_mclk0_clk>;
+		clocks = <&clock_mmss MCLK0_CLK_SRC>,
+				<&clock_mmss CAMSS_MCLK0_CLK>;
 		clock-names = "cam_src_clk", "cam_clk";
 		qcom,clock-rates = <19200000 0>;
 	};
@@ -108,8 +108,8 @@
 		qcom,gpio-req-tbl-label = "CAMIF_MCLK2",
 					  "CAM_RESET2",
 					  "CAM_STANDBY2";
-		clocks = <&clock_mmss clk_mclk2_clk_src>,
-			<&clock_mmss clk_camss_mclk2_clk>;
+		clocks = <&clock_mmss MCLK2_CLK_SRC>,
+			<&clock_mmss CAMSS_MCLK2_CLK>;
 		clock-names = "cam_src_clk", "cam_clk";
 		qcom,clock-rates = <19200000 0>;
 	};
@@ -148,8 +148,8 @@
 		qcom,sensor-mode = <0>;
 		qcom,cci-master = <0>;
 		status = "ok";
-		clocks = <&clock_mmss clk_mclk0_clk_src>,
-				<&clock_mmss clk_camss_mclk0_clk>;
+		clocks = <&clock_mmss MCLK0_CLK_SRC>,
+				<&clock_mmss CAMSS_MCLK0_CLK>;
 		clock-names = "cam_src_clk", "cam_clk";
 		qcom,clock-rates = <24000000 0>;
 	};
@@ -230,8 +230,8 @@
 		qcom,sensor-mode = <0>;
 		qcom,cci-master = <1>;
 		status = "ok";
-		clocks = <&clock_mmss clk_mclk2_clk_src>,
-			<&clock_mmss clk_camss_mclk2_clk>;
+		clocks = <&clock_mmss MCLK2_CLK_SRC>,
+			<&clock_mmss CAMSS_MCLK2_CLK>;
 		clock-names = "cam_src_clk", "cam_clk";
 		qcom,clock-rates = <24000000 0>;
 	};
