--- a/arch/arm64/boot/dts/qcom/msm8996-mdss-pll.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-mdss-pll.dtsi
@@ -24,7 +24,7 @@
 
 		gdsc-supply = <&gdsc_mdss>;
 
-		clocks = <&clock_mmss clk_mdss_ahb_clk>;
+		clocks = <&clock_mmss MDSS_AHB_CLK>;
 		clock-names = "iface_clk";
 		clock-rate = <0>;
 		qcom,dsi-pll-ssc-en;
@@ -62,7 +62,7 @@
 
 		gdsc-supply = <&gdsc_mdss>;
 
-		clocks = <&clock_mmss clk_mdss_ahb_clk>;
+		clocks = <&clock_mmss MDSS_AHB_CLK>;
 		clock-names = "iface_clk";
 		clock-rate = <0>;
 		qcom,dsi-pll-ssc-en;
@@ -97,9 +97,9 @@
 		vddio-supply = <&pm8994_l12>;
 		vcca-supply = <&pm8994_l28>;
 
-		clocks = <&clock_mmss clk_mdss_ahb_clk>,
-			 <&clock_gcc clk_gcc_hdmi_clkref_clk>,
-			 <&clock_gcc clk_ln_bb_clk>;
+		clocks = <&clock_mmss MDSS_AHB_CLK>,
+			 <&clock_gcc GCC_HDMI_CLKREF_CLK>,
+			 <&clock_rpmcc RPM_LN_BB_CLK>;
 		clock-names = "iface_clk", "ref_clk", "ref_clk_src";
 		clock-rate = <0>;
 
