--- a/arch/arm64/boot/dts/qcom/msm8996-mdss.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-mdss.dtsi
@@ -109,11 +109,11 @@
 		qcom,mdss-highest-bank-bit = <0x2>;
 		qcom,mdss-has-decimation;
 		qcom,mdss-idle-power-collapse-enabled;
-		clocks = <&clock_mmss clk_mdss_ahb_clk>,
-			 <&clock_mmss clk_mdss_axi_clk>,
-			 <&clock_mmss clk_mdp_clk_src>,
-			 <&clock_mmss clk_mdss_mdp_vote_clk>,
-			 <&clock_mmss clk_mdss_vsync_clk>;
+		clocks = <&clock_mmss MDSS_AHB_CLK>,
+			 <&clock_mmss MDSS_AXI_CLK>,
+			 <&clock_mmss MDP_CLK_SRC>,
+			 <&clock_mmss MDSS_MDP_VOTE_CLK>,
+			 <&clock_mmss MDSS_VSYNC_CLK>;
 		clock-names = "iface_clk", "bus_clk", "core_clk_src",
 				"core_clk", "vsync_clk";
 
@@ -237,9 +237,9 @@
 			reg = <0x00d08000 0xd00>;
 			reg-names = "mmu_cb";
 			gdsc-mmagic-mdss-supply = <&gdsc_mmagic_mdss>;
-			clocks = <&clock_mmss clk_smmu_mdp_ahb_clk>,
-				<&clock_mmss clk_mmagic_mdss_axi_clk>,
-				<&clock_mmss clk_smmu_mdp_axi_clk>;
+			clocks = <&clock_mmss SMMU_MDP_AHB_CLK>,
+				<&clock_mmss MMAGIC_MDSS_AXI_CLK>,
+				<&clock_mmss SMMU_MDP_AXI_CLK>;
 			clock-names = "mdp_ahb_clk", "mmagic_mdss_axi_clk",
 				"mdp_axi_clk";
 		};
@@ -250,9 +250,9 @@
 			reg = <0x00d0a000 0xd00>;
 			reg-names = "mmu_cb";
 			gdsc-mmagic-mdss-supply = <&gdsc_mmagic_mdss>;
-			clocks = <&clock_mmss clk_smmu_mdp_ahb_clk>,
-				<&clock_mmss clk_mmagic_mdss_axi_clk>,
-				<&clock_mmss clk_smmu_mdp_axi_clk>;
+			clocks = <&clock_mmss SMMU_MDP_AHB_CLK>,
+				<&clock_mmss MMAGIC_MDSS_AXI_CLK>,
+				<&clock_mmss SMMU_MDP_AXI_CLK>;
 			clock-names = "mdp_ahb_clk", "mmagic_mdss_axi_clk",
 				"mdp_axi_clk";
 		};
@@ -307,14 +307,14 @@
 		qcom,mdss-fb-map-prim = <&mdss_fb0>;
 		qcom,mdss-fb-map-sec = <&mdss_fb3>;
 
-		clocks = <&clock_mmss clk_mdss_mdp_vote_clk>,
-			 <&clock_mmss clk_mdss_ahb_clk>,
-			 <&clock_mmss clk_mmss_misc_ahb_clk>,
-			 <&clock_mmss clk_mdss_axi_clk>,
-			 <&clock_mmss clk_ext_byte0_clk_src>,
-			 <&clock_mmss clk_ext_byte1_clk_src>,
-			 <&clock_mmss clk_ext_pclk0_clk_src>,
-			 <&clock_mmss clk_ext_pclk1_clk_src>;
+		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+			 <&clock_mmss MDSS_AHB_CLK>,
+			 <&clock_mmss MMSS_MISC_AHB_CLK>,
+			 <&clock_mmss MDSS_AXI_CLK>,
+			 <&mdss_dsi0_pll BYTE0_MUX_CLK>,
+			 <&mdss_dsi1_pll BYTE1_MUX_CLK>,
+			 <&mdss_dsi0_pll PIX0_MUX_CLK>,
+			 <&mdss_dsi1_pll PIX1_MUX_CLK>;
 		clock-names = "mdp_core_clk", "iface_clk",
 			"core_mmss_clk", "bus_clk",
 			"ext_byte0_clk", "ext_byte1_clk",
@@ -378,15 +378,15 @@
 			ibb-supply = <&ibb_regulator>;
 			qcom,mdss-mdp = <&mdss_mdp>;
 
-			clocks = <&clock_mmss clk_mdss_byte0_clk>,
-				 <&clock_mmss clk_mdss_pclk0_clk>,
-				 <&clock_mmss clk_mdss_esc0_clk>,
-				 <&clock_mmss clk_byte0_clk_src>,
-				 <&clock_mmss clk_pclk0_clk_src>,
-				 <&mdss_dsi0_pll clk_dsi0pll_byte_clk_mux>,
-				 <&mdss_dsi0_pll clk_dsi0pll_pixel_clk_mux>,
-				 <&mdss_dsi0_pll clk_dsi0pll_byte_clk_src>,
-				 <&mdss_dsi0_pll clk_dsi0pll_pixel_clk_src>;
+			clocks = <&clock_mmss MDSS_BYTE0_CLK>,
+				 <&clock_mmss MDSS_PCLK0_CLK>,
+				 <&clock_mmss MDSS_ESC0_CLK>,
+				 <&clock_mmss BYTE0_CLK_SRC>,
+				 <&clock_mmss PCLK0_CLK_SRC>,
+				 <&mdss_dsi0_pll BYTE0_MUX_CLK>,
+				 <&mdss_dsi0_pll PIX0_MUX_CLK>,
+				 <&mdss_dsi0_pll BYTE0_SRC_CLK>,
+				 <&mdss_dsi0_pll PIX0_SRC_CLK>;
 			clock-names = "byte_clk", "pixel_clk", "core_clk",
 				"byte_clk_rcg", "pixel_clk_rcg",
 				"pll_byte_clk_mux", "pll_pixel_clk_mux",
@@ -423,15 +423,15 @@
 			ibb-supply = <&ibb_regulator>;
 			qcom,mdss-mdp = <&mdss_mdp>;
 
-			clocks = <&clock_mmss clk_mdss_byte1_clk>,
-				 <&clock_mmss clk_mdss_pclk1_clk>,
-				 <&clock_mmss clk_mdss_esc1_clk>,
-				 <&clock_mmss clk_byte1_clk_src>,
-				 <&clock_mmss clk_pclk1_clk_src>,
-				 <&mdss_dsi0_pll clk_dsi0pll_byte_clk_mux>,
-				 <&mdss_dsi0_pll clk_dsi0pll_pixel_clk_mux>,
-				 <&mdss_dsi0_pll clk_dsi0pll_byte_clk_src>,
-				 <&mdss_dsi0_pll clk_dsi0pll_pixel_clk_src>;
+			clocks = <&clock_mmss MDSS_BYTE1_CLK>,
+				 <&clock_mmss MDSS_PCLK1_CLK>,
+				 <&clock_mmss MDSS_ESC1_CLK>,
+				 <&clock_mmss BYTE1_CLK_SRC>,
+				 <&clock_mmss PCLK1_CLK_SRC>,
+				 <&mdss_dsi0_pll BYTE0_MUX_CLK>,
+				 <&mdss_dsi0_pll PIX0_MUX_CLK>,
+				 <&mdss_dsi0_pll BYTE0_SRC_CLK>,
+				 <&mdss_dsi0_pll PIX0_SRC_CLK>;
 			clock-names = "byte_clk", "pixel_clk", "core_clk",
 				"byte_clk_rcg", "pixel_clk_rcg",
 				"pll_byte_clk_mux", "pll_pixel_clk_mux",
@@ -486,11 +486,11 @@
 		qcom,disable-load = <0>;
 
 		qcom,msm_ext_disp = <&msm_ext_disp>;
-		clocks = <&clock_mmss clk_mdss_mdp_vote_clk>,
-			 <&clock_mmss clk_mdss_ahb_clk>,
-			 <&clock_mmss clk_mdss_hdmi_clk>,
-			 <&clock_mmss clk_mdss_hdmi_ahb_clk>,
-			 <&clock_mmss clk_mdss_extpclk_clk>;
+		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+			 <&clock_mmss MDSS_AHB_CLK>,
+			 <&clock_mmss MDSS_HDMI_CLK>,
+			 <&clock_mmss MDSS_HDMI_AHB_CLK>,
+			 <&clock_mmss MDSS_EXTPCLK_CLK>;
 		clock-names = "hpd_mdp_core_clk", "hpd_iface_clk",
 			"hpd_core_clk", "hpd_alt_iface_clk", "core_extp_clk";
 
@@ -527,11 +527,11 @@
 
 		qcom,supply-names = "rot-mmagic-mdss-gdsc", "rot-vdd";
 
-		clocks = <&clock_mmss clk_mmss_misc_ahb_clk>,
-			<&clock_mmss clk_mdss_rotator_vote_clk>,
-			<&clock_mmss clk_mdss_ahb_clk>,
-			<&clock_mmss clk_mdss_axi_clk>,
-			<&clock_mmss clk_mdp_clk_src>;
+		clocks = <&clock_mmss MMSS_MISC_AHB_CLK>,
+			<&clock_mmss MDSS_ROTATOR_VOTE_CLK>,
+			<&clock_mmss MDSS_AHB_CLK>,
+			<&clock_mmss MDSS_AXI_CLK>,
+			<&clock_mmss MDP_CLK_SRC>;
 		clock-names = "mnoc_clk", "rot_core_clk",
 			"iface_clk", "axi_clk", "rot_clk";
 
@@ -549,9 +549,9 @@
 			compatible = "qcom,smmu_sde_rot_unsec";
 			iommus = <&rot_smmu 0>;
 			gdsc-mdss-supply = <&gdsc_mmagic_mdss>;
-			clocks = <&clock_mmss clk_smmu_rot_ahb_clk>,
-				<&clock_mmss clk_mmagic_mdss_axi_clk>,
-				<&clock_mmss clk_smmu_rot_axi_clk>;
+			clocks = <&clock_mmss SMMU_ROT_AHB_CLK>,
+				<&clock_mmss MMAGIC_MDSS_AXI_CLK>,
+				<&clock_mmss SMMU_ROT_AXI_CLK>;
 			clock-names = "rot_ahb_clk", "mmagic_mdss_axi_clk",
 				"rot_axi_clk";
 		};
@@ -560,9 +560,9 @@
 			compatible = "qcom,smmu_sde_rot_sec";
 			iommus = <&rot_smmu 1>;
 			gdsc-mdss-supply = <&gdsc_mmagic_mdss>;
-			clocks = <&clock_mmss clk_smmu_rot_ahb_clk>,
-				<&clock_mmss clk_mmagic_mdss_axi_clk>,
-				<&clock_mmss clk_smmu_rot_axi_clk>;
+			clocks = <&clock_mmss SMMU_ROT_AHB_CLK>,
+				<&clock_mmss MMAGIC_MDSS_AXI_CLK>,
+				<&clock_mmss SMMU_ROT_AXI_CLK>;
 			clock-names = "rot_ahb_clk", "mmagic_mdss_axi_clk",
 				"rot_axi_clk";
 		};
