--- a/arch/arm64/boot/dts/qcom/msm8996-regulator.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-regulator.dtsi
@@ -12,7 +12,7 @@
 
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/spmi/spmi.h>
-#include <dt-bindings/regulator/max20010.h>
+//#include <dt-bindings/regulator/max20010.h>
 
 &rpm_bus {
 	/* PM8994 S1 + S6 = 2 phase VDD_CX supply */
@@ -587,7 +587,7 @@
 		compatible = "qcom,cpr3-msm8996-hmss-regulator";
 		reg = <0x099e8000 0x4000>, <0x00074000 0x1000>;
 		reg-names = "cpr_ctrl", "fuse_base";
-		clocks = <&clock_gcc clk_gcc_hmss_rbcpr_clk>;
+		clocks = <&clock_gcc GCC_HMSS_RBCPR_CLK>;
 		clock-names = "core_clk";
 		interrupts = <GIC_SPI 48 IRQ_TYPE_EDGE_RISING>,
 			<GIC_SPI 47 IRQ_TYPE_EDGE_RISING>;
@@ -1660,9 +1660,9 @@
 		compatible = "qcom,cpr3-msm8996-mmss-regulator";
 		reg = <0x00838000 0x4000>, <0x00074000 0x1000>;
 		reg-names = "cpr_ctrl", "fuse_base";
-		clocks = <&clock_mmss clk_mmss_rbcpr_clk>,
-			 <&clock_mmss clk_mmss_rbcpr_ahb_clk>,
-			 <&clock_mmss clk_mmss_mmagic_ahb_clk>;
+		clocks = <&clock_mmss MMSS_RBCPR_CLK>,
+			 <&clock_mmss MMSS_RBCPR_AHB_CLK>,
+			 <&clock_mmss MMSS_MMAGIC_AHB_CLK>;
 		clock-names = "core_clk", "iface_clk", "bus_clk";
 		interrupts = <GIC_SPI 166 IRQ_TYPE_EDGE_RISING>;
 		interrupt-names = "cpr";
@@ -1991,16 +1991,4 @@
 		onnn,restore-reg;
 		status = "disabled";
 	  };
-
-	max20010_vreg: max20010-regulator@38 {
-		compatible = "maxim,max20010";
-		reg = <0x38>;
-		vin-supply = <&hl7509_en_vreg>;
-		regulator-min-microvolt = <600000>;
-		regulator-max-microvolt = <1270000>;
-		regulator-initial-mode = <MAX20010_OPMODE_SYNC>;
-		maxim,vrange-sel = <0>;
-		maxim,soft-start-slew-rate = <5500>;
-		maxim,dvs-slew-rate = <5500>;
-	};
 };
