--- a/arch/arm64/boot/dts/qcom/msm8996-sde.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-sde.dtsi
@@ -23,16 +23,16 @@
 		contiguous-region = <&cont_splash_mem &cont_splash_mem_hdmi>;
 
 		/* clock and supply entries */
-		clocks = <&clock_mmss clk_mdss_ahb_clk>,
-			 <&clock_mmss clk_mdss_axi_clk>,
-			 <&clock_mmss clk_mdp_clk_src>,
-			 <&clock_mmss clk_mdss_mdp_vote_clk>,
-			 <&clock_mmss clk_smmu_mdp_axi_clk>,
-			 <&clock_mmss clk_smmu_mdp_ahb_clk>,
-			 <&clock_mmss clk_smmu_rot_axi_clk>,
-			 <&clock_mmss clk_smmu_rot_ahb_clk>,
-			 <&clock_mmss clk_mmagic_mdss_axi_clk>,
-			 <&clock_mmss clk_mdss_vsync_clk>;
+		clocks = <&clock_mmss MDSS_AHB_CLK>,
+			 <&clock_mmss MDSS_AXI_CLK>,
+			 <&clock_mmss MDP_CLK_SRC>,
+			 <&clock_mmss MDSS_MDP_VOTE_CLK>,
+			 <&clock_mmss SMMU_MDP_AXI_CLK>,
+			 <&clock_mmss SMMU_MDP_AHB_CLK>,
+			 <&clock_mmss SMMU_ROT_AXI_CLK>,
+			 <&clock_mmss SMMU_ROT_AHB_CLK>,
+			 <&clock_mmss MMAGIC_MDSS_AXI_CLK>,
+			 <&clock_mmss MDSS_VSYNC_CLK>;
 		clock-names = "iface_clk",
 			"bus_clk",
 			"core_clk_src",
@@ -225,15 +225,15 @@
 		vdda-supply = <&pm8994_l2>;
 		vcca-supply = <&pm8994_l28>;
 
-		clocks = <&clock_mmss clk_mdss_mdp_vote_clk>,
-			 <&clock_mmss clk_mdss_ahb_clk>,
-			 <&clock_mmss clk_mmss_misc_ahb_clk>,
-			 <&clock_mmss clk_mdss_axi_clk>,
-			 <&clock_mmss clk_mdss_byte0_clk>,
-			 <&clock_mmss clk_mdss_pclk0_clk>,
-			 <&clock_mmss clk_mdss_esc0_clk>,
-			 <&clock_mmss clk_byte0_clk_src>,
-			 <&clock_mmss clk_pclk0_clk_src>;
+		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+			 <&clock_mmss MDSS_AHB_CLK>,
+			 <&clock_mmss MMSS_MISC_AHB_CLK>,
+			 <&clock_mmss MDSS_AXI_CLK>,
+			 <&clock_mmss MDSS_BYTE0_CLK>,
+			 <&clock_mmss MDSS_PCLK0_CLK>,
+			 <&clock_mmss MDSS_ESC0_CLK>,
+			 <&clock_mmss BYTE0_CLK_SRC>,
+			 <&clock_mmss PCLK0_CLK_SRC>;
 
 		clock-names = "mdp_core_clk", "iface_clk",
 			"core_mmss_clk", "bus_clk",
@@ -301,15 +301,15 @@
 		vdda-supply = <&pm8994_l2>;
 		vcca-supply = <&pm8994_l28>;
 
-		clocks = <&clock_mmss clk_mdss_mdp_vote_clk>,
-			 <&clock_mmss clk_mdss_ahb_clk>,
-			 <&clock_mmss clk_mmss_misc_ahb_clk>,
-			 <&clock_mmss clk_mdss_axi_clk>,
-			 <&clock_mmss clk_mdss_byte1_clk>,
-			 <&clock_mmss clk_mdss_pclk1_clk>,
-			 <&clock_mmss clk_mdss_esc1_clk>,
-			 <&clock_mmss clk_byte1_clk_src>,
-			 <&clock_mmss clk_pclk1_clk_src>;
+		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+			 <&clock_mmss MDSS_AHB_CLK>,
+			 <&clock_mmss MMSS_MISC_AHB_CLK>,
+			 <&clock_mmss MDSS_AXI_CLK>,
+			 <&clock_mmss MDSS_BYTE1_CLK>,
+			 <&clock_mmss MDSS_PCLK1_CLK>,
+			 <&clock_mmss MDSS_ESC1_CLK>,
+			 <&clock_mmss BYTE1_CLK_SRC>,
+			 <&clock_mmss PCLK1_CLK_SRC>;
 		clock-names = "mdp_core_clk", "iface_clk",
 			"core_mmss_clk", "bus_clk",
 			"byte_clk", "pixel_clk", "core_clk",
@@ -373,10 +373,10 @@
 		gdsc-supply = <&gdsc_mdss>;
 		vdda-supply = <&pm8994_l2>;
 
-		clocks = <&clock_mmss clk_mdss_mdp_vote_clk>,
-			 <&clock_mmss clk_mdss_ahb_clk>,
-			 <&clock_mmss clk_mmss_misc_ahb_clk>,
-			 <&clock_mmss clk_mdss_axi_clk>;
+		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+			 <&clock_mmss MDSS_AHB_CLK>,
+			 <&clock_mmss MMSS_MISC_AHB_CLK>,
+			 <&clock_mmss MDSS_AXI_CLK>;
 		clock-names = "mdp_core_clk", "iface_clk",
 			"core_mmss_clk", "bus_clk";
 
@@ -432,10 +432,10 @@
 		gdsc-supply = <&gdsc_mdss>;
 		vdda-supply = <&pm8994_l2>;
 
-		clocks = <&clock_mmss clk_mdss_mdp_vote_clk>,
-			 <&clock_mmss clk_mdss_ahb_clk>,
-			 <&clock_mmss clk_mmss_misc_ahb_clk>,
-			 <&clock_mmss clk_mdss_axi_clk>;
+		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+			 <&clock_mmss MDSS_AHB_CLK>,
+			 <&clock_mmss MMSS_MISC_AHB_CLK>,
+			 <&clock_mmss MDSS_AXI_CLK>;
 		clock-names = "mdp_core_clk", "iface_clk",
 			"core_mmss_clk", "bus_clk";
 
@@ -490,11 +490,11 @@
 		reg-names = "core_physical",
 			"qfprom_physical",
 			"hdcp_physical";
-		clocks = <&clock_mmss clk_mdss_mdp_vote_clk>,
-			 <&clock_mmss clk_mdss_ahb_clk>,
-			 <&clock_mmss clk_mdss_hdmi_clk>,
-			 <&clock_mmss clk_mdss_hdmi_ahb_clk>,
-			 <&clock_mmss clk_mdss_extpclk_clk>;
+		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+			 <&clock_mmss MDSS_AHB_CLK>,
+			 <&clock_mmss MDSS_HDMI_CLK>,
+			 <&clock_mmss MDSS_HDMI_AHB_CLK>,
+			 <&clock_mmss MDSS_EXTPCLK_CLK>;
 		clock-names =
 			"mdp_core_clk",
 			"iface_clk",
