--- a/arch/arm64/boot/dts/qcom/msm8996-tone-kagura-camera.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-tone-kagura-camera.dtsi
@@ -96,8 +96,8 @@
 		qcom,sensor-mode = <0>;
 		qcom,cci-master = <0>;
 		status = "ok";
-		clocks = <&clock_mmss clk_mclk0_clk_src>,
-			 <&clock_mmss clk_camss_mclk0_clk>;
+		clocks = <&clock_mmss MCLK0_CLK_SRC>,
+			 <&clock_mmss CAMSS_MCLK0_CLK>;
 		clock-names = "cam_src_clk", "cam_clk";
 		qcom,clock-rates = <24000000 0>;
 	};
@@ -131,8 +131,8 @@
 		qcom,sensor-mode = <1>;
 		qcom,cci-master = <1>;
 		status = "ok";
-		clocks = <&clock_mmss clk_mclk2_clk_src>,
-			 <&clock_mmss clk_camss_mclk2_clk>;
+		clocks = <&clock_mmss MCLK2_CLK_SRC>,
+			 <&clock_mmss CAMSS_MCLK2_CLK>;
 		clock-names = "cam_src_clk", "cam_clk";
 		qcom,clock-rates = <24000000 0>;
 	};
