--- a/arch/arm64/boot/dts/qcom/msm8996-v2.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-v2.dtsi
@@ -26,19 +26,19 @@
 };
 
 &clock_gcc {
-	compatible = "qcom,gcc-8996-v2";
+	compatible = "qcom,gcc-msm8996-v2";
 };
 
 &clock_debug {
-	compatible = "qcom,cc-debug-8996-v2";
+	compatible = "qcom,cc-debug-msm8996-v2";
 };
 
 &clock_mmss {
-	compatible = "qcom,mmsscc-8996-v2";
+	compatible = "qcom,mmcc-msm8996";
 };
 
 &clock_gpu {
-	compatible = "qcom,gpucc-8996-v2";
+	compatible = "qcom,gpucc-msm8996-v2";
 	qcom,gfx3d_clk_src_v2-opp-handle = <&msm_gpu>;
 	qcom,gfxfreq-speedbin0 =
 		<	   0  0  0 >,
@@ -58,8 +58,8 @@
 
 &gdsc_gpu_gx {
 	clock-names = "core_clk", "core_root_clk";
-	clocks = <&clock_gpu clk_gpu_gx_gfx3d_clk>,
-		 <&clock_gpu clk_gfx3d_clk_src_v2>;
+	clocks = <&clock_gpucc GPU_GX_GFX3D_CLK>,
+		 <&clock_gpucc GFX3D_CLK_SRC>;
 };
 
 &pm8994_s11 {
@@ -648,7 +648,7 @@
 		qcom,use-ipa-tethering-bridge;
 		qcom,ipa-bam-remote-mode;
 		qcom,modem-cfg-emb-pipe-flt;
-		clocks = <&clock_gcc clk_ipa_clk>;
+		clocks = <&clock_rpmcc RPM_IPA_CLK>;
 		clock-names = "core_clk";
 		qcom,use-dma-zone;
 	};
@@ -664,8 +664,8 @@
 		reg = <0x3840000 0x1000>;
 		reg-names = "etm-base";
 
-		clocks = <&clock_gcc clk_qdss_clk>,
-			 <&clock_gcc clk_qdss_a_clk>;
+		clocks = <&clock_rpmcc RPM_QDSS_CLK>,
+			 <&clock_rpmcc RPM_QDSS_A_CLK>;
 		clock-names = "core_clk", "core_a_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU0>;
@@ -678,8 +678,8 @@
 		reg = <0x3940000 0x1000>;
 		reg-names = "etm-base";
 
-		clocks = <&clock_gcc clk_qdss_clk>,
-			 <&clock_gcc clk_qdss_a_clk>;
+		clocks = <&clock_rpmcc RPM_QDSS_CLK>,
+			 <&clock_rpmcc RPM_QDSS_A_CLK>;
 		clock-names = "core_clk", "core_a_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU1>;
@@ -692,8 +692,8 @@
 		reg = <0x3a40000 0x1000>;
 		reg-names = "etm-base";
 
-		clocks = <&clock_gcc clk_qdss_clk>,
-			 <&clock_gcc clk_qdss_a_clk>;
+		clocks = <&clock_rpmcc RPM_QDSS_CLK>,
+			 <&clock_rpmcc RPM_QDSS_A_CLK>;
 		clock-names = "core_clk", "core_a_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU2>;
@@ -706,8 +706,8 @@
 		reg = <0x3b40000 0x1000>;
 		reg-names = "etm-base";
 
-		clocks = <&clock_gcc clk_qdss_clk>,
-			 <&clock_gcc clk_qdss_a_clk>;
+		clocks = <&clock_rpmcc RPM_QDSS_CLK>,
+			 <&clock_rpmcc RPM_QDSS_A_CLK>;
 		clock-names = "core_clk", "core_a_clk";
 
 		qcom,coresight-jtagmm-cpu = <&CPU3>;
