--- a/arch/arm64/boot/dts/qcom/msm8996-vidc.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-vidc.dtsi
@@ -84,15 +84,15 @@
 		clock-names = "smmu_ahb_clk", "smmu_axi_clk",
 			"mmagic_video_axi", "core_clk", "iface_clk",
 			"bus_clk", "maxi_clk", "core0_clk", "core1_clk";
-		clocks = <&clock_mmss clk_smmu_video_ahb_clk>,
-		       <&clock_mmss clk_smmu_video_axi_clk>,
-		       <&clock_mmss clk_mmagic_video_axi_clk>,
-		       <&clock_mmss clk_video_core_clk>,
-		       <&clock_mmss clk_video_ahb_clk>,
-		       <&clock_mmss clk_video_axi_clk>,
-		       <&clock_mmss clk_video_maxi_clk>,
-		       <&clock_mmss clk_video_subcore0_clk>,
-		       <&clock_mmss clk_video_subcore1_clk>;
+		clocks = <&clock_mmss SMMU_VIDEO_AHB_CLK>,
+		       <&clock_mmss SMMU_VIDEO_AXI_CLK>,
+		       <&clock_mmss MMAGIC_VIDEO_AXI_CLK>,
+		       <&clock_mmss VIDEO_CORE_CLK>,
+		       <&clock_mmss VIDEO_AHB_CLK>,
+		       <&clock_mmss VIDEO_AXI_CLK>,
+		       <&clock_mmss VIDEO_MAXI_CLK>,
+		       <&clock_mmss VIDEO_SUBCORE0_CLK>,
+		       <&clock_mmss VIDEO_SUBCORE1_CLK>;
 		qcom,clock-configs = <0x0 0x0 0x0 0x1 0x0 0x0 0x0 0x1 0x1>;
 
 		/* Buses */
@@ -223,8 +223,8 @@
 		reg-names = "reg-base", "mem-base";
 
 		vdd-supply = <&gdsc_mmagic_video>;
-		clocks = <&clock_mmss clk_vmem_ahb_clk>,
-		       <&clock_mmss clk_vmem_maxi_clk>;
+		clocks = <&clock_mmss VMEM_AHB_CLK>,
+		       <&clock_mmss VMEM_MAXI_CLK>;
 		clock-names = "ahb", "maxi";
 		clock-config = <0x0 0x0 0x0 0x1>;
 
